--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "hexo-site",
+  "name": "self_blog",
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "6.1.0"
   },
   "scripts": {
     "publish": "hexo g -w",
     "debug": "hexo server"
   },
   "dependencies": {
-    "hexo": "^3.9.0",
+    "hexo": "^6.1.0",
     "hexo-excerpt": "^1.1.4",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
