﻿style: 切换主题为stun(元concise)

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: concise
+## stun theme: https://github.com/liuyib/hexo-theme-stun
+theme: stun
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
