--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "scripts": {
     "publish": "hexo g -w",
+    "clean": "hexo clean && hexo s",
     "debug": "hexo server"
   },
   "dependencies": {
     "hexo": "^6.1.0",
-    "hexo-excerpt": "^1.1.4",
+    "hexo-excerpt": "^1.2.1",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
@@ -19,6 +20,7 @@
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-less": "^1.0.0",
     "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3"
   }
