--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 卫某人的草原
+title: 🍉草原
 subtitle:
 description:
 keywords:
@@ -75,6 +75,35 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 ## stun theme: https://github.com/liuyib/hexo-theme-stun
 theme: stun
+## 自定义theme配置: https://hexo.io/docs/configuration.html
+theme_config:
+  enable: true
+  busuanzi: 
+    enable: false
+  header:
+    enable: true
+    bg_image:
+      enable: true
+      url: /images/background/bk3.jpeg
+  footer: 
+    custom: 
+      enable: true
+      text: '且随疾风前行，身后亦需留心'
+    icon:
+      enable: true
+      name: 标签test
+    copyright:
+      enable: true
+      since: 2019
+      end: 2022
+      text: 西瓜🍉
+      author: 
+      beian:
+        icp: 
+    powered: 
+      enable: true
+      version: 
+     
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
