--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "version": "6.1.0"
   },
   "scripts": {
-    "publish": "hexo g -w",
-    "clean": "hexo clean && hexo s --port=4001",
-    "debug": "hexo server --port=4001"
+    "debug": "hexo g && hexo s -p=4001",
+    "clean": "rm -f db.json && cd ./public && rm -rf `ls | grep -v .git` && cd ..",
+    "publish": "npm run clean && hexo g -f",
+    "deploy": "npm run publish && cd ./public && git add . && git commit && git push && cd .."
   },
   "dependencies": {
     "hexo": "^6.1.0",
