--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "6.1.0"
   },
   "scripts": {
+    "hexo:clean": "hexo clean",
     "debug": "hexo g && hexo s -p=4001",
     "clean": "rm -f db.json && cd ./public && rm -rf `ls | grep -v .git` && cd ..",
     "publish": "npm run clean && hexo g -f",
