--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -f db.json && cd ./public && rm -rf `ls | grep -v .git` && cd ..",
     "publish": "npm run clean && hexo g -f",
     "deploy": "npm run publish && cd ./public && git add . && git commit && git push && cd ..",
-    "generate": "TODO: 生成模板文档，用户输入分类、标记，图片默认生成不同的"
+    "generate": "node scripts/generate.js"
   },
   "dependencies": {
     "hexo": "^6.1.0",
