--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public"]
 	path = public
 	url = git@github.com:weisiwu/weisiwu.github.io.git
+[submodule "stun"]
+	path = themes/stun
+	url = git@github.com:liuyib/hexo-theme-stun.git
