--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
+    "hexo-wordcount": "^6.0.1",
     "simple-git": "^3.17.0"
   }
 }
