--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -f db.json && cd ./public && rm -rf `ls | grep -v .git` && cd ..",
     "publish": "npm run clean && hexo g -f",
     "deploy": "npm run publish && cd ./public && git add . && git commit && git push && cd ..",
-    "tpl": "node generate.js"
+    "tpl": "node generate.js",
+    "gf": "hexo g -f"
   },
   "dependencies": {
     "cd": "^0.3.3",
