--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "scripts": {
     "hexo:clean": "hexo clean",
     "debug": "hexo g && hexo s -p=4001",
-    "sync": "cd public && git pull && cd .. && git pull",
-    "clean": "rm -f db.json && cd ./public && rm -rf `ls | grep -v .git` && cd ..",
+    "dev": "npm run debug",
+    "serve": "hexo s -p=4001",
+    "sync": "git -C public pull && git pull",
+    "clean": "node -e \"const fs=require('fs'); const path=require('path'); const root=process.cwd(); const db=path.join(root,'db.json'); if(fs.existsSync(db)) fs.rmSync(db,{force:true}); const pub=path.join(root,'public'); if(fs.existsSync(pub)){ for(const name of fs.readdirSync(pub)){ if(name==='.git') continue; fs.rmSync(path.join(pub,name),{recursive:true,force:true}); } }\"",
     "publish": "npm run clean && hexo g -f",
-    "deploy": "npm run publish && cd ./public && git add . && git commit && git push && cd ..",
+    "build": "npm run publish",
+    "deploy": "npm run publish && git -C public add . && git -C public commit -m \"deploy\" && git -C public push",
     "tpl": "node generate.js",
     "gf": "hexo g -f"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "dependencies": {
-    "cd": "^0.3.3",
-    "del": "^7.0.0",
     "hexo": "^6.1.0",
     "hexo-excerpt": "^1.2.1",
     "hexo-generator-archive": "^0.1.5",
@@ -32,8 +36,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
-    "hexo-wordcount": "^6.0.1",
-    "simple-git": "^3.17.0"
+    "hexo-wordcount": "^6.0.1"
   },
   "repository": "git@github.com:weisiwu/Blog.git"
 }
